# youtube-downloader-gui

./: .gitignore  Cargo.toml
src/: bootstrap.rs  downloader.rs  main.rs
ui/: appwindow.slint
