[package]
name = "youtube-downloader-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9.0"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "rustls-tls"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures-util = "0.3"
zip = "0.6"
bytes = "1.7"
directories = "5.0"
rfd = "0.15"

[build-dependencies]
slint-build = "1.9.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
